kubernetes/YAML-STANDARD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: standard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "fastapi-k3s.app2.abrdns.com"
      secretName: fastapi-secret
  rules:
    - host: "fastapi-k3s.app2.abrdns.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000
